--- a/index.html
+++ b/index.html
@@ -172,7 +172,25 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
-  <body>
+  <body><div id="password-screen" style="position:fixed;top:0;left:0;width:100%;height:100%;background:#111;z-index:9999;display:flex;flex-direction:column;align-items:center;justify-content:center;">
+  <h2 style="color:white;">Enter Password</h2>
+  <input type="password" id="site-password" placeholder="Password" style="padding:10px;font-size:16px;" />
+  <button onclick="checkPassword()" style="margin-top:10px;padding:10px 20px;font-size:16px;">Enter</button>
+</div>
+
+<script>
+  const correctPassword = "408263";
+
+  function checkPassword() {
+    const input = document.getElementById("site-password").value;
+    if (input === correctPassword) {
+      document.getElementById("password-screen").style.display = "none";
+    } else {
+      alert("Wrong password");
+    }
+  }
+</script>
+
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-P93VS8N5"
