--- a/games/index.html
+++ b/games/index.html
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div onclick="window.location = 'https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app'" style="cursor: pointer;" id="unity-build-title">Back | </div>
+        <div onclick="window.location = 'https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app" style="cursor: pointer;" id="unity-build-title">Back | </div>
       </div>
     </div>
     <script>
