--- a/games/unity.html
+++ b/games/unity.html
@@ -3,7 +3,7 @@
   <head>
     <script
       defer
-      data-domain="sz-games.github.io"
+      data-domain="hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app"
       src="https://stats.senty.com.au/js/script.outbound-links.pageview-props.tagged-events.js"
     ></script>
     <script
