--- a/settings.html
+++ b/settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script defer data-domain="sz-games.github.io" src="https://stats.senty.com.au/js/script.outbound-links.pageview-props.tagged-events.js"></script>
+  <script defer data-domain="hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app" src="https://stats.senty.com.au/js/script.outbound-links.pageview-props.tagged-events.js"></script>
   <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
   
 
