--- a/Bitlife.html
+++ b/Bitlife.html
@@ -43,7 +43,7 @@
     "name": "BitLife",
     "description": "BitLife is a life simulation game where players control a characters life from birth to death, making choices that shape their career, relationships, and key life events.",
     "image": "https://sz-games.github.io/cover/Bitlife.png",
-    "url": "https://sz-games.github.io/Bitlife",
+    "url": "https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/Bitlife",
     "operatingSystem": "Web",
     "applicationCategory": "Game",
     "playMode": "SinglePlayer"
