--- a/Bitlife.html
+++ b/Bitlife.html
@@ -325,7 +325,7 @@ document.getElementById('game').height = hh;
 // Get the text element
 var textElement = document.getElementById("game");
 
-textElement.src = 'https://sz-games.github.io/Games9/bitlife';
+textElement.src = 'https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/Games9/bitlife';
 
 
   </script>
