--- a/Bitlife.html
+++ b/Bitlife.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-<script defer data-domain="sz-games.github.io" src="https://stats.senty.com.au/js/script.outbound-links.pageview-props.tagged-events.js"></script>
+<script defer data-domain="hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app" src="https://stats.senty.com.au/js/script.outbound-links.pageview-props.tagged-events.js"></script>
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
 
