--- a/Bitlife.html
+++ b/Bitlife.html
@@ -24,7 +24,7 @@
 <title>Play Bitlife On Sz Games</title>
 <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('https://sz-games.github.io/service-worker.js');
+    navigator.serviceWorker.register('https://sz-gam.github.io/service-worker.js');
   }
 </script>
 <meta charset="UTF-8">
