--- a/Bitlife.html
+++ b/Bitlife.html
@@ -24,7 +24,7 @@
 <title>Play Bitlife On Sz Games</title>
 <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('https://sz-gam.github.io/service-worker.js');
+    navigator.serviceWorker.register('https://sz-games.github.io/service-worker.js');
   }
 </script>
 <meta charset="UTF-8">
@@ -254,7 +254,7 @@ content="sz games, bitlife github, bitlife unblocked, bitlife, play bitlife onli
 <div  style="transition: 0.5s; cursor: pointer; position: fixed; border-radius: 15px; color: rgb(224, 224, 224); background-color: #1d1d1dc0; left: 0; bottom: 0px; margin: 10px;" id="Menu">
 
 
-<span class="material-icons buttonForMenu" style="margin: 5px;" onclick="window.location = 'https://sz-games.github.io'" >
+<span class="material-icons buttonForMenu" style="margin: 5px;" onclick="window.location = 'https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app'" >
   arrow_back
   </span>
   <span class="material-icons buttonForMenu" style="margin: 5px;" onclick="makeFullScreen()" >
