--- a/index.html
+++ b/index.html
@@ -1351,14 +1351,14 @@
 
         <div id="games">
           <div class="box" id="Infinite Tower" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/home/webb/">
+            <a href="https://sz-gam.github.io/home/webb/">
               <!--p class="game" style="left: 105px;" >Infinite Tower</p>
         <div class="fade" ></div-->
 
               <img
                 fetchpriority="low"
                 class="ImageForGame"
-                data-src="https://github.com/sz-games/sz-games.github.io/blob/main/cover/helix.webp?raw=true"
+                data-src="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/blob/main/cover/helix.webp?raw=true"
                 alt="game"
               />
               <div
@@ -1376,7 +1376,7 @@
           </div>
 
           <div class="box" id="Tunnel Rush" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/unity.html?game=https://sz-games.github.io/games/tunnel-rush/">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/unity.html?game=https://sz-gam.github.io/games/tunnel-rush/">
               <!--p class="game" >Tunnel Rush</p>
       <div class="fade" ></div-->
               <img
@@ -1508,7 +1508,7 @@
           </div>
 
           <div class="box" id="Stack" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/games/stack">
+            <a href="games/game.html?game=https://sz-games.github.io/games/stack">
               <img
                 fetchpriority="low"
                 class="ImageForGame"
