--- a/games/Flash.html
+++ b/games/Flash.html
@@ -86,11 +86,11 @@
 
     <script>
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('https://sz-games.github.io/service-worker.js')
+        navigator.serviceWorker.register('https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/service-worker.js')
       }
     </script>
 
-    <link rel="manifest" href="https://sz-games.github.io/manifest.json" />
+    <link rel="manifest" href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/manifest.json" />
     <style>
       body {
         margin: 0;
@@ -505,7 +505,7 @@
       <span
         class="material-icons buttonForMenu"
         style="margin: 5px"
-        onclick="window.location = 'https://sz-games.github.io'"
+        onclick="window.location = 'https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/'"
       >
         arrow_back
       </span>
