--- a/index.html
+++ b/index.html
@@ -1521,8 +1521,8 @@
           </div>
 
           <div class="box" id="Fly Hydra" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/Bin/Game_file/call/hydra">
-              <img
+            <a href="https://github.com/Udar7sfustusut/sz-gam.github.io/tree/main/index.html/games/Bin/Game_file/call/hydra">
+              <img -
                 fetchpriority="low"
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/hydra.webp"
@@ -1534,7 +1534,7 @@
           </div>
 
           <div class="box" id="Dungeon Warrior" category="Fighting Action" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/dungeon">
+            <a href="https://sz-games.github.io/games/dungeon">I 
               <img
                 fetchpriority="low"
                 class="ImageForGame"
@@ -1553,7 +1553,7 @@
             style="position: relative; float: left"
           >
             <a
-              href="https://sz-games.github.io/games/Flash.html?game=/games/henry-airship/infiltratingtheairshipgame.swf"
+              href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Flash.html?game=/games/henry-airship/infiltratingtheairshipgame.swf"
             >
               <img
                 class="ImageForGame"
