--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@
           </div>
 
           <div class="box" id="Space War" category="Casual Shooter" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/games/spac/">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app//games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/spac/">
               <!--p class="game" >Space Wars </p>
       <div class="fade" ></div-->
               <img
@@ -1582,7 +1582,7 @@
 
           <div class="box" id="Escaping The Prison" category="Casual Action" style="position: relative; float: left">
             <a
-              href="https://sz-games.github.io/games/Flash.html?game=https://sz-games.github.io/Games7/escaping_the_prison.swf?raw=true"
+              href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Flash.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/Games/escaping_the_prison.swf?raw=true"
             >
               <img
                 class="ImageForGame"
