--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@
           </div>
 
           <div class="box" id="Tunnel Rush" category="Casual" style="position: relative; float: left">
-            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/unity.html?game=https://sz-gam.github.io/games/tunnel-rush/">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/unity.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/tunnel-rush/">
               <!--p class="game" >Tunnel Rush</p>
       <div class="fade" ></div-->
               <img
