--- a/games/index.html
+++ b/games/index.html
@@ -6,6 +6,8 @@
     <title></title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
