--- a/games/index.html
+++ b/games/index.html
@@ -115,6 +115,10 @@
           alert(message);
         });
       };
+      <ruffle-player>
+  <source src="game.swf" type="application/x-shockwave-flash" />
+</ruffle-player>
+
       document.body.appendChild(script);
     </script>
   </body>
