--- a/games/swf/prison.html
+++ b/games/swf/prison.html
@@ -79,7 +79,7 @@ color: white;
 </style>
 
 <div>
-   <embed class="em" id="game" width=" 100%;" height="550px" src="https://games-from-flash.github.io/swf/Henry%20Stickmin%20-%20Escaping%20the%20Prison.swf?raw=true" ></embed>
+   <embed class="em" id="game" width=" 100%;" height="550px" src="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/swf/Prison.swf" ></embed>
 </div>
 
 
