--- a/games/swf/prison.html
+++ b/games/swf/prison.html
@@ -2,99 +2,85 @@
 <html>
 <head>
   <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-    <link rel="icon" href="https://github.com/sz-games/home/blob/main/G.png?raw=true">
-    <title>Sz Games</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
+  <link rel="icon" href="https://github.com/sz-games/home/blob/main/G.png?raw=true">
+  <title>Sz Games</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {}
 
-body {
- 
-}
+    .btn-group button {
+      background-color: black;
+      color: white;
+      padding: 10px 24px;
+      cursor: pointer;
+      float: left;
+    }
 
-.btn-group button {
-  background-color: black; /* Green background */
- 
-  color: white; /* White text */
-  padding: 10px 24px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
-  float: left; /* Float the buttons side by side */
-}
+    .btn-group:after {
+      content: "";
+      clear: both;
+      display: table;
+    }
 
-/* Clear floats (clearfix hack) */
-.btn-group:after {
-  content: "";
-  clear: both;
-  display: table;
-}
+    .btn-group button:not(:last-child) {
+      border-right: none;
+    }
 
-.btn-group button:not(:last-child) {
-  border-right: none; /* Prevent double borders */
-}
+    .btn-group button:hover {
+      background-color: grey;
+    }
 
-/* Add a background color on hover */
-.btn-group button:hover {
-  background-color: grey;
-}
+    .header {
+      padding: 60px;
+      text-align: center;
+      background: linear-gradient(to bottom right, #9a9a9a, rgb(39, 39, 39));
+      color: white;
+      width: auto;
+      font-size: 30px;
+      font-family: Arial, Helvetica, sans-serif;
+      border-radius: 15px;
+    }
 
-/* Header/Logo Title */
-.header {
-  padding: 60px;
-  text-align: center;
-  background: linear-gradient(to bottom right, #9a9a9a, rgb(39, 39, 39));
-  color: white;
-  width: auto;
-  font-size: 30px;
- 
-  font-family: Arial, Helvetica, sans-serif;
-  border-radius: 15px;
-}
-
-/* Page Content */
-
-</style>
-</head>
-<body onresize="resize()">
-<style>
     .game {
-        position: absolute;
-color: white;
-
-  transform: scale(1.8);
-  z-index: 3;
-  font-family: Arial, Helvetica, sans-serif;
+      position: absolute;
+      color: white;
+      transform: scale(1.8);
+      z-index: 3;
+      font-family: Arial, Helvetica, sans-serif;
     }
+
     .fade {
-        position: absolute;
-        background: linear-gradient(to bottom, #1d1d1d, #1d1d1d5d, rgba(39, 39, 39, 0));
-        width: 300px;
-        height: 150px;
-     border-radius: 15px;
+      position: absolute;
+      background: linear-gradient(to bottom, #1d1d1d, #1d1d1d5d, rgba(39, 39, 39, 0));
+      width: 300px;
+      height: 150px;
+      border-radius: 15px;
     }
 
-.em {
-  margin: 0 auto;
-}
-   
-</style>
+    .em {
+      margin: 0 auto;
+    }
+  </style>
+</head>
 
-<div>
-   <embed class="em" id="game" width=" 100%;" height="550px" src="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/swf/Prison.swf" ></embed>
-</div>
+<body onresize="resize()">
 
-
-  </body>
+  <div>
+    <ruffle-player class="em" id="game" style="width: 100%; height: 550px;">
+      <source src="games/swf/Prison.swf" type="application/x-shockwave-flash" />
+    </ruffle-player>
+  </div>
 
   <script>
+    function resize() {
+      let hh = window.innerHeight - 100;
+      document.getElementById('game').style.height = hh + 'px';
+    }
 
-let hh = window.innerHeight - 100;
-
-
-document.getElementById('game').height = hh;
-window.onresize = function(event) {
-  let hh = window.innerHeight - 100;
-
-document.getElementById('game').height = hh;
-}
+    resize(); // initial call
   </script>
+
+</body>
 </html>
+
