--- a/index.html
+++ b/index.html
@@ -1576,19 +1576,17 @@
                 alt="game"
               />
 
-              <div class="textover" style="border-radius: 15px; background-color: #191919db">Fleeing The Complex</div>
-            </a>
-          </div>
-
           <div class="box" id="Escaping The Prison" category="Casual Action" style="position: relative; float: left">
-            <a
-              href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Flash.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/Games/escaping_the_prison.swf?raw=true"
-            >
-              <img
-                class="ImageForGame"
-                data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/Prison.webp"
-                alt="game"
-              />
+  <a href="/games/Flash.html?game=/games/swf/Prison.swf">
+    <img
+      class="ImageForGame"
+      data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/Prison.webp"
+      alt="game"
+    />
+    <div class="textover" style="border-radius: 15px; background-color: #191919db">Escaping The Prison</div>
+  </a>
+</div>
+
 
               <div class="textover" style="border-radius: 15px; background-color: #191919db">Escaping The Prison</div>
             </a>
