--- a/index.html
+++ b/index.html
@@ -2000,7 +2000,7 @@
           </div>
 
           <div class="box" id="agar.io" category="Casual Multiplayer" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/games/agario">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/agario">
               <img
                 class="ImageForGame"
                 data-src="https://github.com/sz-games/sz-games.github.io/blob/main/cover/agario.jpeg?raw=true"
@@ -2029,7 +2029,7 @@
             style="position: relative; float: left"
           >
             <a
-              href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/Games7/basketball-stars"
+              href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://sz-games.github.io/Games7/basketball-stars"
             >
               <img
                 class="ImageForGame"
@@ -2375,7 +2375,7 @@
           </div>
 
           <div class="box" id="bloons Tower Defense" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/Flash.html?game=https://sz-games.github.io/Games7/bloonstd.swf">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Flash.html?game=https://sz-games.github.io/Games7/bloonstd.swf">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/btd.png"
@@ -2396,7 +2396,7 @@
           </div>
 
           <div class="box" id="bloons Tower Defense 3" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/Flash.html?game=https://sz-games.github.io/Games7/btd3.swf">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app//games/Flash.html?game=https://sz-games.github.io/Games7/btd3.swf">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/btd3.png"
