--- a/games/index.html
+++ b/games/index.html
@@ -7,24 +7,32 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-
   </head>
   <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1080 height=500></canvas>
+    <!-- Unity Game Container -->
+    <div id="unity-container" class="unity-desktop" style="display: none;">
+      <canvas id="unity-canvas" width="1080" height="500"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
-      <div id="unity-warning"> </div>
+      <div id="unity-warning"></div>
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div onclick="window.location = 'https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app" style="cursor: pointer;" id="unity-build-title">Back | </div>
+        <div onclick="window.location = 'https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app'" style="cursor: pointer;" id="unity-build-title">Back | </div>
       </div>
     </div>
+
+    <!-- Flash Game Container (Ruffle Player) -->
+    <div id="flash-container" style="display: none;">
+      <ruffle-player id="ruffle-player">
+        <source src="game.swf" type="application/x-shockwave-flash" />
+      </ruffle-player>
+    </div>
+
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
@@ -33,12 +41,7 @@
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
+      // Unity Banner Display (error/warning)
       function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
@@ -47,60 +50,44 @@
         div.innerHTML = msg;
         warningBanner.appendChild(div);
         if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
+        else if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+        setTimeout(function() {
+          warningBanner.removeChild(div);
+          updateBannerVisibility();
+        }, 5000);
         updateBannerVisibility();
       }
 
+      // Unity Game Configuration
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/zombie.loader.js";
+      var loaderUrl = buildUrl + "/game.loader.js";  // Specify the loader for Unity build
       var config = {
-        dataUrl: buildUrl + "/zombie.data",
-        frameworkUrl: buildUrl + "/zombie.framework.js",
-        codeUrl: buildUrl + "/zombie.wasm",
+        dataUrl: buildUrl + "/game.data",
+        frameworkUrl: buildUrl + "/game.framework.js",
+        codeUrl: buildUrl + "/game.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "My project (2)",
-        productVersion: "0.1",
+        productName: "Unity Game",
+        productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
+      // Detect Mobile Devices for Optimized Experience
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
         var meta = document.createElement('meta');
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
         container.className = "unity-mobile";
         canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
         unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
         canvas.style.width = "1080px";
         canvas.style.height = "500px";
       }
 
+      // Loading Unity Game
       loadingBar.style.display = "block";
-
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
@@ -115,11 +102,24 @@
           alert(message);
         });
       };
-      <ruffle-player>
-  <source src="game.swf" type="application/x-shockwave-flash" />
-</ruffle-player>
 
       document.body.appendChild(script);
+
+      // Auto Detect and Load Unity or Flash Based on Available Content
+      // You can set the flag here to determine which game type to load
+      var isUnityGame = false; // Default to false, change if Unity is detected
+      var isFlashGame = true;  // Default to true for Flash, you can adjust conditions
+
+      // You can check conditions here (e.g., file extension or game content)
+      if (isUnityGame) {
+        // Show Unity Game
+        document.querySelector("#flash-container").style.display = "none";
+        container.style.display = "block";
+      } else if (isFlashGame) {
+        // Show Flash Game (via Ruffle)
+        container.style.display = "none";
+        document.querySelector("#flash-container").style.display = "block";
+      }
     </script>
   </body>
 </html>
