--- a/index.html
+++ b/index.html
@@ -6455,7 +6455,7 @@
           </div>
 
           <div class="box" id="slowroads" category="Casual Driver" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/Games7/slowroads">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app//games/game.html?game=https://sz-games.github.io/Games7/slowroads">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/SLOWROADS.png"
