--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+[<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -1424,7 +1424,7 @@
           </div>
 
           <div class="box" id="Slope" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/slope/">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/slope/">
               <img
                 fetchpriority="low"
                 class="ImageForGame"
@@ -1446,7 +1446,7 @@
           </div>
 
           <div class="box" id="Asteroids Belt" category="Casual Shooter" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/games/spacesh/">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/spacesh/">
               <img
                 fetchpriority="low"
                 class="ImageForGame"
@@ -1469,7 +1469,7 @@
           </div>
 
           <div class="box" id="Backrooms" category="Horror" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/unity.html?game=https://sz-games.github.io/Games/backrooms">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/unity.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/Games/backrooms">
               <img
                 fetchpriority="low"
                 class="ImageForGame"
@@ -1482,7 +1482,7 @@
           </div>
 
           <div class="box" id="Slide In The Woods" category="Horror" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/woods">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/woods">
               <img
                 fetchpriority="low"
                 class="ImageForGame"
@@ -1495,7 +1495,7 @@
           </div>
 
           <div class="box" id="Survivor Mode" category="Shooter" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/zombie">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/zombie">
               <img
                 fetchpriority="low"
                 class="ImageForGame"
@@ -1508,7 +1508,7 @@
           </div>
 
           <div class="box" id="Stack" category="Casual" style="position: relative; float: left">
-            <a href="games/game.html?game=https://sz-games.github.io/games/stack">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/stack">
               <img
                 fetchpriority="low"
                 class="ImageForGame"
@@ -1521,7 +1521,7 @@
           </div>
 
           <div class="box" id="Fly Hydra" category="Casual" style="position: relative; float: left">
-            <a href="https://github.com/Udar7sfustusut/sz-gam.github.io/tree/main/index.html/games/Bin/Game_file/call/hydra">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Bin/Game_file/call/hydra">
               <img -
                 fetchpriority="low"
                 class="ImageForGame"
@@ -1534,7 +1534,7 @@
           </div>
 
           <div class="box" id="Dungeon Warrior" category="Fighting Action" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/dungeon">I 
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/dungeon">I 
               <img
                 fetchpriority="low"
                 class="ImageForGame"
@@ -1577,7 +1577,7 @@
               />
 
           <div class="box" id="Escaping The Prison" category="Casual Action" style="position: relative; float: left">
-  <a href="/games/Flash.html?game=/games/swf/Prison.swf">
+  <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app//games/Flash.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app//games/swf/Prison.swf">
     <img
       class="ImageForGame"
       data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/Prison.webp"
@@ -1635,7 +1635,7 @@
           </div>
 
           <div class="box" id="1v1 lol" category="Fighting Shooter Multiplayer" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/Games-2/lol/">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://sz-games.github.io/Games-2/lol/">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/lol.webp"
@@ -1671,7 +1671,7 @@
           </div>
 
           <div class="box" id="Riddle School 2" category="Casual Adventure" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/Flash.html?game=/games/swf/riddd2.swf">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Flash.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/swf/riddd2.swf">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/rid2.webp"
@@ -1683,7 +1683,7 @@
           </div>
 
           <div class="box" id="riddle school 3" category="Casual Adventure" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/Flash.html?game=/games/swf/riddd3.swf">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Flash.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app//games/swf/riddd3.swf">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/rid3.webp"
@@ -1695,7 +1695,7 @@
           </div>
 
           <div class="box" id="riddle school 4" category="Casual Adventure" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/Flash.html?game=/games/swf/riddd4.swf">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Flash.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/swf/riddd4.swf">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/rid4.webp"
@@ -1707,7 +1707,7 @@
           </div>
 
           <div class="box" id="riddle school 5" category="Casual Adventure" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/Flash.html?game=/games/swf/riddd5.swf">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Flash.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/swf/riddd5.swf">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/rid5.webp"
@@ -1743,7 +1743,7 @@
           </div>
 
           <div class="box" id="Subway Surfers" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://dddavit.github.io/subway/">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://dddavit.github.io/subway/">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/sub.webp"
@@ -1755,7 +1755,7 @@
           </div>
 
           <div class="box" id="Chrome Dino" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/games/dino">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/dino">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/dino.webp"
@@ -1779,7 +1779,7 @@
 
           <div class="box" id="paper.io" category="Casual Multiplayer" style="position: relative; float: left">
             <a
-              href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/Games/paperio2/index.html"
+              href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/Games/paperio2/index.html"
             >
               <img
                 class="ImageForGame"
