--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <meta name="title" content="Sz Games" />
     <meta name="author" content="Sz Games" />
 
-    <title>Sz Games</title>
+    <title>SŹ ĞAMES</title>
 
     <meta name="revisit-after" content="1 days" />
 
@@ -1719,7 +1719,7 @@
           </div>
 
           <div class="box" id="riddle transfer" category="Casual Adventure" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/Flash.html?game=/games/swf/riddd6.swf">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/Flash.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/swf/riddd6.swf">
               <img
                 class="ImageForGame"
                 data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/rid6.webp"
@@ -1967,7 +1967,7 @@
           </div>
 
           <div class="box" id="bloxorz" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/bloxx">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/bloxx">
               <img
                 class="ImageForGame"
                 data-src="https://github.com/sz-games/sz-games.github.io/blob/main/cover/blox.jpeg?raw=true"
@@ -1990,7 +1990,7 @@
           </div>
 
           <div class="box" id="cookie clicker" category="Casual Idle" style="float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://player.work/cookie-clicker/">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://player.work/cookie-clicker/">
               <img
                 class="ImageForGame"
                 data-src="https://github.com/sz-games/sz-games.github.io/blob/main/cover/click.png?raw=true"
@@ -2093,7 +2093,7 @@
           </div>
 
           <div class="box" id="Funny Shooter" category="Casual Shooter" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/fs">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/fs">
               <img
                 class="ImageForGame"
                 data-src="https://github.com/sz-games/storage3/blob/main/fs.jpeg?raw=true"
@@ -2173,7 +2173,7 @@
             >
               <img
                 class="ImageForGame"
-                data-src="https://raw.githubusercontent.com/sz-games/sz-games.github.io/main/cover/fnaf1.jpeg"
+                data-src="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/sz-games/sz-games.github.io/main/cover/fnaf1.jpeg"
                 alt="game"
               />
               <div class="textover">FNAF</div>
@@ -2254,7 +2254,7 @@
 
           <div class="box" id="We Become What We Behold" category="Casual" style="position: relative; float: left">
             <a
-              href="https://sz-games.github.io/games/game.html?game=https://mr-funkinguy.github.io/gfile/wbwwb/index.html"
+              href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/game.html?game=https://mr-funkinguy.github.io/gfile/wbwwb/index.html"
             >
               <img
                 class="ImageForGame"
@@ -2307,7 +2307,7 @@
 
           <div class="box" id="Flappy Bird" category="Casual" style="position: relative; float: left">
             <a
-              href="https://sz-games.github.io/games/game.html?game=https://mr-funkinguy.github.io/gfile/flappy/index.html"
+              href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://mr-funkinguy.github.io/gfile/flappy/index.html"
             >
               <img
                 class="ImageForGame"
@@ -2350,7 +2350,7 @@
           </div>
 
           <div class="box" id="Chess" category="Casual" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/games/chess/index.html">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app//games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/chess/index.html">
               <img
                 class="ImageForGame"
                 data-src="https://github.com/sz-games/sz-games.github.io/blob/main/cover/chess.png?raw=true"
@@ -2459,7 +2459,7 @@
           </div>
 
           <div class="box" id="Sandboxels" category="Casual Sandbox" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://mr-funkinguy.github.io/sandboxels">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://mr-funkinguy.github.io/sandboxels">
               <img
                 class="ImageForGame"
                 data-src="https://mr-funkinguy.github.io/sandboxels/icons/wallpaper.webp"
@@ -2604,7 +2604,7 @@
 
           <div class="box" id="Happy Wheels" category="Casual" style="position: relative; float: left">
             <a
-              href="https://sz-games.github.io/games/game.html?game=https://mrsnailman.github.io/Happy-Wheels-Source-Code/"
+              href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://mrsnailman.github.io/Happy-Wheels-Source-Code/"
             >
               <img
                 class="ImageForGame"
@@ -2627,7 +2627,7 @@
           </div>
 
           <div class="box" id="Rooftop Snipers" category="Shooter" style="position: relative; float: left">
-            <a href="https://sz-games.github.io/games/game.html?game=https://sz-games.github.io/games/rooftop-snipers/">
+            <a href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/rooftop-snipers/">
               <img
                 class="ImageForGame"
                 data-src="https://github.com/sz-games/sz-games.github.io/blob/main/cover/rooftop-snipers.png?raw=true"
@@ -2650,7 +2650,7 @@
 
           <div class="box" id="Cube 2" category="Casual" style="position: relative; float: left">
             <a
-              href="https://sz-games.github.io/games/game.html?game=https://kripken.github.io/BananaBread/cube2/bb.html"
+              href="https://hwugifijifjjhijsoohsoohhdhosjijihfijo.netlify.app/games/game.html?game=https://kripken.github.io/BananaBread/cube2/bb.html"
             >
               <img
                 class="ImageForGame"
